# IdentityGuardian

./: .env.example  .gitignore  .replit  FEATURES.md  README.md  audit.py  docker-compose.yml  main.py  pyproject.toml  replit.md  requirements.txt  scheduler.py  webhook.py
.github/workflows/: ci.yml
backend/: auth.py  main.py  services.py
backend/api/: access.py  groups.py  lifecycle.py  monitoring.py  reviews.py  risk.py  scim.py
examples/: auto_block_demo.py  example_usage.py  group_demo.py  scim_demo.py
frontend/: .env.example  index.html  package.json
frontend/src/: App.tsx  index.css  main.tsx  msalConfig.ts
identity_guardian/: __init__.py  cli.py
identity_guardian/agents/: access_request_agent.py  access_review_agent.py  lifecycle_agent.py  monitoring_agent.py  risk_agent.py
identity_guardian/config/: settings.py
identity_guardian/integrations/: identity_provider.py  scim.py  sentinel.py  siem.py  teams_bot.py
identity_guardian/models/: __init__.py
identity_guardian/utils/: telemetry.py
identity_security_framework/: __init__.py  cli.py
identity_security_framework/agents/: __init__.py  access_request_agent.py  access_review_agent.py  coordinator.py  mock_coordinator.py
identity_security_framework/config/: settings.py
identity_security_framework/integrations/: __init__.py  grc.py  identity_provider.py  (+1 more)
scim2_client/: __init__.py  client.py
scim2_models/: __init__.py
tests/: conftest.py  test_auth.py  test_auto_block.py  test_azure_privileged_access.py  test_dashboard_api.py  test_readme_dashboard.py  test_scim.py  test_scim_groups.py
(+10 files in other folders)
