[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "autogen-agentchat>=0.7.5",
    "autogen-ext[openai]>=0.7.5",
    "fastapi>=0.112.0",
    "httpx>=0.27.0",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "typing-extensions>=4.15.0",
    "uvicorn[standard]>=0.30.0",
]
